# autoroutes

./: .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  autoroutes.pyx  bench.py  profile_.py  pyproject.toml  setup.py
tests/: conftest.py  test_edge.py  test_routes.py
tools/: bench.py  profile_.py
