[build-system]
requires = ["setuptools >= 74.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoroutes"
version = "0.3.8"
readme = "README.md"
authors = [
  {name = "Yohan Boniface", email = "yohanboniface@free.fr"},
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: Web Environment",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/pyrates/autoroutes"

[project.optional-dependencies]
dev = [
  "build",
  "cython",
  "pytest",
  "twine",
]

[tool.setuptools]
ext-modules = [
  {name = "autoroutes", sources = ["autoroutes.pyx"]}
]
py-modules = ["autoroutes"]
